Added Script File from Coding Challenge

--- a/index.html
+++ b/index.html
@@ -118,5 +118,6 @@
     <div id="footer_container">
         <p>© Nintendo. Games are property of their respective owners. Nintendo of America Inc. Headquarters are in Redmond, Washington, USA</p>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
